force-app/main/default/objects/LVC_ProductStockDate__c/LVC_ProductStockDate__c.object-meta.xml
<CustomObject>
    <label>Producto en Stock Fecha</label>
    <nameField>
        <displayFormat>STOCK-{0000000000}</displayFormat>
        <label>Producto en Stock Fecha</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Productos en Stock Fecha</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>