force-app/main/default/objects/LVC_ProductStockDate__c/fields/ConsumedStock__c.field-meta.xml
<CustomField>
    <fullName>ConsumedStock__c</fullName>
    <label>Stock Consumido</label>
    <summarizedField>LVC_OrderProduct__c.Quantity__c</summarizedField>
    <summaryForeignKey>LVC_OrderProduct__c.ProductStockDate__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>