force-app/main/default/objects/LVC_ProductStockDate__c/fields/DistributionCenter__c.field-meta.xml
<CustomField>
    <fullName>DistributionCenter__c</fullName>
    <label>Centro De Distribución</label>
    <referenceTo>LVC_DistributionCenter__c</referenceTo>
    <relationshipLabel>Productos en Stock Fecha</relationshipLabel>
    <relationshipName>Product_Stock_Date</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>