force-app/main/default/objects/LVC_ProductStockDate__c/fields/StockDate__c.field-meta.xml
<CustomField>
    <fullName>StockDate__c</fullName>
    <label>Fecha de Stock</label>
    <required>true</required>
    <type>Date</type>
</CustomField>