force-app/main/default/objects/LVC_ProductStockDate__c/fields/StockExternalId__c.field-meta.xml
<CustomField>
    <fullName>StockExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Stock External Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>